fix: empty gap between sticky definition's header and accordion's header

--- a/src/styles/app/_accordion-item.scss
+++ b/src/styles/app/_accordion-item.scss
@@ -8,7 +8,7 @@
       & .container {
         z-index: 1;
         position: sticky;
-        top: 105px;
+        top: 100px;
 
         @media (max-width: 1024px) {
           top: 132px;
